--- a/src/app/views/cars/cars.component.html
+++ b/src/app/views/cars/cars.component.html
@@ -1,6 +1,6 @@
 <!-- <app-add-car-component></app-add-car-component>
 <app-change-status-component></app-change-status-component> -->
-<div class="container">
+<div class="container-fluid">
     <!-- Page Heading -->
 
 
@@ -128,7 +128,7 @@
             border-radius: 5px;
             font-size: 14px;
             cursor: pointer;
-            margin-left: 500px;
+            margin-left: 949px;
             /* Add margin to separate from the search bar */
         }
 
@@ -144,7 +144,7 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
-            margin-left: 797px;
+            margin-left: 949px;
         }
 
 
