--- a/src/app/views/components/profile/profile.component.html
+++ b/src/app/views/components/profile/profile.component.html
@@ -14,7 +14,7 @@
 
 
 
-<div class="container mt-5">
+<div class="container-fluid mt-5">
     <div *ngIf="data" class="profile-card">
         <div class="profile-header">
             <h2>{{ data.fullname }}</h2>
