--- a/src/app/views/components/add-car/add-car.component.html
+++ b/src/app/views/components/add-car/add-car.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <form #f="ngForm" (ngSubmit)="add(f)">
         <div class="row">
             <div class="col-md-6">
