--- a/src/app/views/transfers/transfers.component.html
+++ b/src/app/views/transfers/transfers.component.html
@@ -57,7 +57,7 @@
     <pagination-controls (pageChange)="config.currentPage = $event"></pagination-controls>
 
 </div> -->
-<div class="container">
+<div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">Liste Transfers
@@ -164,32 +164,21 @@
 
 
 
-    .add-button {
-        background-color: #007bff;
-        /* Button background color */
-        color: #fff;
-        /* Button text color */
-        border: none;
-        border-radius: 5px;
-        font-size: 14px;
-        cursor: pointer;
-        margin-left: 500px;
-        /* Add margin to separate from the search bar */
-    }
+
 
     .add-button:hover {
         background-color: #0056b3;
         /* Button background color on hover */
     }
 
-    .add-button {
+    .container-fluid .add-button {
         background-color: #007bff;
         color: #fff;
         border: none;
         border-radius: 5px;
         font-size: 16px;
         cursor: pointer;
-        margin-left: 797px;
+        margin-left: 949px;
     }
 
     .search-container {
