Final commi frontend

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -100,7 +100,7 @@
         <hr class="sidebar-divider">
         <!-- Heading -->
         <div class="sidebar-heading">
-            Gestion Voitures
+            Gestion
         </div>
 
         <!-- ------------------------------------------------------ cars  -->
@@ -124,7 +124,7 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/transfers">
                 <i class="fas fa-fw fa-exchange-alt"></i>
-                <span>Transfers</span>
+                <span>Transferts</span>
             </a>
         </li>
 
